<resources>
    <string name="app_name">NguyenVanAnhTuan 19497581 ChangeMaker</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clear">CLEAR</string>
    <string name="_6">6</string>
    <string name="price">Price:</string>
    <string name="label_0">0</string>
    <string name="_5dollars">$5:</string>
    <string name="_20dollars">$20:</string>
    <string name="_1dollar">$1:</string>
    <string name="_25cents">25¢:</string>
    <string name="_10cents">10¢:</string>
    <string name="_5cents">5¢:</string>
    <string name="_1cent">1¢:</string>
    <string name="_10dollars">$10:</string>
    <string name="txtInputToolText">0.00</string>
</resources>