<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="226dp"
        android:layout_height="310dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714">

        <Button
            android:id="@+id/btn8"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_8"
            android:textColor="#795548"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_1"
            android:textColor="#795548"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_3"
            android:textColor="#795548"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_6"
            android:textColor="#795548"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_5"
            android:textColor="#795548"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_4"
            android:textColor="#795548"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_7"
            android:textColor="#795548"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_9"
            android:textColor="#795548"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="128dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/clear"
            android:textColor="#795548"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn8"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_0"
            android:textColor="#795548"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/btn7"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="60dp"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#d6d7d7"
            android:text="@string/_2"
            android:textColor="#795548"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="110dp"
        android:layout_height="340dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtAmount10dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount20dollars" />

        <TextView
            android:id="@+id/txtAmount20dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtAmount1dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount5dollars" />

        <TextView
            android:id="@+id/txtAmount25cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount1dollar" />

        <TextView
            android:id="@+id/txtAmount10cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount25cents" />

        <TextView
            android:id="@+id/txtAmount5cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount10cents" />

        <TextView
            android:id="@+id/txtAmount1cent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount5cents" />

        <TextView
            android:id="@+id/txtAmount5dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/label_0"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount10dollars" />

        <TextView
            android:id="@+id/txt5dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_5dollars"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount5dollars"
            app:layout_constraintHorizontal_bias="0.628"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt10dollars" />

        <TextView
            android:id="@+id/txt20dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_20dollars"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount20dollars"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt1dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_1dollar"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount1dollar"
            app:layout_constraintHorizontal_bias="0.628"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt5dollars" />

        <TextView
            android:id="@+id/txt25cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_25cents"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount25cents"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt1dollar" />

        <TextView
            android:id="@+id/txt10cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_10cents"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount10cents"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt25cents" />

        <TextView
            android:id="@+id/txt5cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_5cents"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount5cents"
            app:layout_constraintHorizontal_bias="0.611"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt10cents" />

        <TextView
            android:id="@+id/txt1cent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_1cent"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount1cent"
            app:layout_constraintHorizontal_bias="0.611"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt5cents" />

        <TextView
            android:id="@+id/txt10dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_10dollars"
            android:textSize="@dimen/txtPriceHeight"
            app:layout_constraintEnd_toStartOf="@+id/txtAmount10dollars"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt20dollars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:gravity="end"
            android:maxWidth="280dp"
            android:minWidth="200dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488"
            tools:text="0.00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="48dp"
        android:text="@string/price"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>